<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/scan_page"
        android:enabled="true"
        android:title="Scan"/>

    <item
        android:id="@+id/generate_page"
        android:enabled="true"
        android:title="Generate"/>

    <item
        android:id="@+id/history_page"
        android:enabled="true"
        android:title="History"/>

</menu>